# CloudStorage

./: README.md  config.py  connection_test.py  main.py  pyproject.toml  redis.conf  requirements.txt
celery_app/: app.py
